<!-- Copyright 2015, 2018 Tremolo Security, Inc. Licensed under the Apache License,
	Version 2.0 (the "License"); you may not use this file except in compliance
	with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0
	Unless required by applicable law or agreed to in writing, software distributed
	under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES
	OR CONDITIONS OF ANY KIND, either express or implied. See the License for
	the specific language governing permissions and limitations under the License. -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.tremolosecurity.unison</groupId>
	<artifactId>unison</artifactId>
	<version>1.0.39</version>
	<name>Unison</name>
	<packaging>pom</packaging>

	<properties>
		<openunison.version>1.0.39</openunison.version>
		<servlet.api.version>3.1.0</servlet.api.version>
		<servlet.2x.api.version>2.5</servlet.2x.api.version>
		<jakarta-api.version>6.0.0</jakarta-api.version>
		<commons-collections.version>3.2.2</commons-collections.version>
		<commons-cli.version>1.6.0</commons-cli.version>
		<commons-codec.version>1.16.0</commons-codec.version>
		<opensaml.version>4.3.0</opensaml.version>
		<xerces.version>2.12.2</xerces.version>
		<alfresco-client.version>5.0.a</alfresco-client.version>
		<javax.xml.rpc-api.version>1.1.2</javax.xml.rpc-api.version>
		<google-api-client.version>2.2.0</google-api-client.version>
		<c3p0.version>0.9.5.5</c3p0.version>
		<google-api-services-plus.version>v1-rev20190328-1.30.10</google-api-services-plus.version>
		<google-api-services-oauth2.version>v2-rev20200213-2.0.0</google-api-services-oauth2.version>
		<google-api-services-admin-directory.version> directory_v1-rev20231113-2.0.0</google-api-services-admin-directory.version>
		<json-simple.version>1.1.1</json-simple.version>
		<twilio-java-sdk.version>9.14.1</twilio-java-sdk.version>
		<restfb.version>3.18.0</restfb.version>
		<jbosssx-bare.version>4.1.6.Final</jbosssx-bare.version>
		<jbosssx-client.version>4.1.6.Final</jbosssx-client.version>
		<jboss-as-logging.version>7.2.0.Final</jboss-as-logging.version>
		<jboss-as-web.version>7.2.0.Final</jboss-as-web.version>
		<gson.version>2.10.1</gson.version>
		<bcprov-jdk18on.version>1.77</bcprov-jdk18on.version>
		<bcprov-ext-jdk18on.version>1.77</bcprov-ext-jdk18on.version>
		<bcpkix-jdk18on.version>1.77</bcpkix-jdk18on.version>
		<catalina.version>10.1.10</catalina.version>
		<undertow-1x.version>1.0.0.Final</undertow-1x.version>
		<myvd-server.version>1.0.20</myvd-server.version>
		<jldap.version>1.0.3</jldap.version>
		<httpclient.version>4.5.14</httpclient.version>
		<httpcore.version>4.4.16</httpcore.version>
		<httpmime.version>4.5.14</httpmime.version>
		<commons-fileupload.version>2.0.0-M1-SNAPSHOT</commons-fileupload.version>
		<javax.jms-api.version>2.0.1</javax.jms-api.version>
		<quartz.version>2.3.2</quartz.version>
		<quartz-jobs.version>2.3.2</quartz-jobs.version>
		<json-io.version>4.19.1</json-io.version>
		<log4j.version>2.22.1</log4j.version>
		<joda-time.version>2.12.5</joda-time.version>
		<javax.mail-api.version>1.6.2</javax.mail-api.version>
		<sun.mail-api.version>1.6.7</sun.mail-api.version>
		<bcpkix-jdk15on.version>1.70</bcpkix-jdk15on.version>
		<net.sourceforge.spnego.version>3.0.0</net.sourceforge.spnego.version>
		<reflections.version>0.10.2</reflections.version>
		<apache-log4j-extras.version>1.2.17</apache-log4j-extras.version>
		<googleauth.version>1.5.0</googleauth.version>
		<activemq.version>5.18.3</activemq.version>
		<commons-pool2.version>2.12.0</commons-pool2.version>
		<aws-java-sdk.version>1.12.666</aws-java-sdk.version>
		<amazon-sqs-java-messaging-lib.version>1.1.3</amazon-sqs-java-messaging-lib.version>
		<stringtemplate.version>4.3.4</stringtemplate.version>
		<hibernate.version>5.6.15.Final</hibernate.version>
		<javaee.version>7.0</javaee.version>
		<org.apache.poi.version>5.2.5</org.apache.poi.version>
		<jose4j.version>0.9.4</jose4j.version>
		<mongodb-driver.version>3.12.14</mongodb-driver.version>
		<xalan.version>2.7.3</xalan.version>
		<jackson.version>2.16.1</jackson.version>
		<jackson-core.version>2.16.1</jackson-core.version>
		<slf4j.version>2.0.9</slf4j.version>
		<guava.version>33.0.0-jre</guava.version>
		<undertow.version>2.3.10.Final</undertow.version>
	  	<jastow.version>2.2.7.Final</jastow.version>
	  	<jboss-jstl-api_1.2_spec.version>1.1.4.Final</jboss-jstl-api_1.2_spec.version>
	  	<xmlsec.version>2.0.6</xmlsec.version>
	  	<snakeyaml.version>2.2</snakeyaml.version>
	  	<prometheus.version>0.16.0</prometheus.version>
	  	<ibm-mq.version>9.3.4.1</ibm-mq.version>
	  	<okta.version>8.2.3</okta.version>
	  	<azure-auth.version>1.14.2</azure-auth.version>
	  	<cryptacular.version>1.2.6</cryptacular.version>
	  	<santuario-xmlsec.version>4.0.1</santuario-xmlsec.version>
		<netty-codec.version>4.1.104.Final</netty-codec.version>
		<netty-common.version>4.1.104.Final</netty-common.version>
		<netty-https2.version>4.1.104.Final</netty-https2.version>
		<dom4j.version>2.1.4</dom4j.version>  
		<gitlab.version>5.4.0</gitlab.version>
		<commons-beanutils.version>1.9.4</commons-beanutils.version>
		<swagger-core.version>2.1.5</swagger-core.version>
		<k8sapi.version>10.0.0</k8sapi.version>
		<jgit.version>6.8.0.202311291450-r</jgit.version>
		<json-patch.version>1.13</json-patch.version>
		<batik-svgbrowser.version>1.17</batik-svgbrowser.version>
		<xmlgraphics-commons.version>2.9</xmlgraphics-commons.version>
		<json-smart.version>2.5.0</json-smart.version>
		<xnio-api.version>3.8.12.Final</xnio-api.version>
		<okta-authn.version>2.0.11</okta-authn.version>
		<okta-http.version>8.2.5</okta-http.version>
		<jersey.version>2.41</jersey.version>
		<woodstox.version>6.5.1</woodstox.version>
		<spring.version>5.3.31</spring.version>
		<activation.version>1.2.0</activation.version>
		<velocity.version>2.3</velocity.version>
		<nimbusds.version>11.9</nimbusds.version>
		<pdfbox.version>3.0.1</pdfbox.version>
		<ws.rs-api.version>2.1.1</ws.rs-api.version>
		<qpid.version>1.11.0</qpid.version>
		<commons-io.version>2.15.1</commons-io.version>
		<graaljs.version>22.3.4</graaljs.version>
		<commons-compress.version>1.25.0</commons-compress.version>
		<webauthn4j.version>0.22.0.RELEASE</webauthn4j.version>
		<githubapi.version>1.318</githubapi.version>
		<json-path.version>2.8.0</json-path.version>
		<lazysodium.version>5.1.4</lazysodium.version>
		<jna.version>5.14.0</jna.version>
		<expressly.version>5.0.0</expressly.version>
		<el-api.version>5.0.1</el-api.version>
		<!-- last version that supports java 11 -->
		<ecj.version>3.33.0</ecj.version>
		<jakarta-jsp.version>3.1.1</jakarta-jsp.version>
		<org-json-json.version>20231013</org-json-json.version>
	</properties>

	<repositories>
		<repository>
			<id>tremolosecurity-releases</id>
			<!-- <url>https://nexus.tremolo.io/repository/betas/</url> -->
			<url>https://nexus.tremolo.io/repository/releases/</url>
		</repository>
	
		<repository>
			<id>tremolosecurity-dependencies</id>
			<!-- <url>https://nexus.tremolo.io/repository/betas/</url> -->
			<url>https://nexus.tremolo.io/repository/dependencies/</url>
		</repository>

	
		<!-- <repository>
			<id>jboss</id>
			<url>https://repository.jboss.org/nexus/content/repositories/</url>
		</repository>  -->

		<repository>
			<id>opensaml</id>
			<url>https://build.shibboleth.net/nexus/content/repositories/releases/</url>
		</repository>

	</repositories>

	<distributionManagement>
		<repository>
			<!--  <id>nexus.tremolo.io</id>  -->
			<id>nexus.tremolo.io</id>
			<name>tremolo.io-releases</name>
			<url>s3://tremolosecurity-maven/repository/releases/</url>  
		</repository>

	</distributionManagement>

	<modules>
		<module>unison-sdk</module>
		<module>unison-server-core</module>
		
		<module>unison-lastmile-servlet-3.x</module>
		<module>unison-lastmile-tomcat-6</module>
		<module>unison-applications-drupal</module>
		
		<module>unison-applications-sugarcrm-6.x</module>
		<module>unison-lastmile-sdk</module>
		<module>unison-provisioning-sdk</module>
		<module>unison-sdk-types</module>


		<module>unison-services-aws</module>
		

		<module>unison-authentication-2fasms-twilio</module>




		

		<module>unison-applications-google</module>
		
		<module>unison-applications-wordpress</module>
		<module>open-unison-webapp</module>
		<module>open-unison-classes</module>
		<module>openunison-util</module>
		<module>openunsion-manual</module>
		<module>unison-myvd</module>
		<module>open-unison-webapp-webservices</module>
		<module>unison-scalejs-main</module>
		<module>unison-scalejs-token</module>
		<module>unison-scalejs-common</module>
		<module>unison-services-freeipa</module>
		<module>unison-scalejs-singlerequest</module>
		<module>unison-applications-openshift3</module>
		<module>unison-scalejs-register</module>
		<module>unison-services-openstack</module>
		<module>unison-scalejs-password</module>
		<module>unison-services-mongodb</module>
		<module>unison-auth-openidconnect</module>
		<module>unison-idp-openidconnect</module>
		<module>unison-applications-k8s</module>
		<module>unison-auth-u2f</module>
		<module>unison-auth-duo</module>
		<module>openunison-on-undertow</module>
		<module>myvd-on-undertow</module>
		<module>openunison-util-classes</module>
		<module>unison-service-undertow</module>
		<module>unison-applications-prometheus</module>
		<module>ibm-mq-connection-factory</module>
		<module>unison-scalejs-operators</module>
		<module>unison-applications-okta</module>
		<module>unison-applications-gitlab</module>
		<module>unison-applications-argocd</module>
	</modules>
	<build>
	<extensions>
        <extension>
            <groupId>com.gkatzioura.maven.cloud</groupId>
            <artifactId>s3-storage-wagon</artifactId>
            <version>2.3</version>
        </extension>
    </extensions>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>11</source>
					<target>11</target>
				</configuration>
				<executions>
					<execution>
						<id>default-testCompile</id>
						<phase>test-compile</phase>
						<goals>
							<goal>testCompile</goal>
						</goals>
					</execution>
					<execution>
						<id>default-compile</id>
						<phase>compile</phase>
						<goals>
							<goal>compile</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>

	</build>
	<reporting>
		<plugins>
			<plugin>
				<artifactId>maven-project-info-reports-plugin</artifactId>
				<configuration>
					<dependencyLocationsEnabled>false</dependencyLocationsEnabled>
				</configuration>
			</plugin>
		</plugins>
	</reporting>
</project>
